# AP4A_projet

./: .gitignore  CMakeLists.txt  Data.h  README.md  Scheduler.cpp  Scheduler.h  Sensor.cpp  Sensor.h  SensorLight.cpp  SensorLight.h  Server.cpp  Server.h  data.cpp  data.h  diagram.puml  main.cpp  main.h  projet.puml  scheduler.cpp  scheduler.h  sensor.cpp  sensor.h  sensortemp.cpp  sensortemp.h  server.cpp  server.h  slight.cpp  slight.h  tpsy
Sensors/: Sensor.cpp  Sensor.h  SensorBool.cpp  SensorBool.h  SensorFloat.cpp  SensorFloat.h  SensorInteger.cpp  SensorInteger.h
headers/: main.h  scheduler.h  sensor.h  server.h
sources/: data.cpp  main.cpp  scheduler.cpp  sensor.cpp  server.cpp
uml/: class-diagram.puml  send-data-sequence-diagram.puml
